frontend: Fix overlap issue
Fix overlap issue on OperatorHub where items was overflowing its container.

--- a/frontend/public/components/catalog/_catalog.scss
+++ b/frontend/public/components/catalog/_catalog.scss
@@ -178,7 +178,6 @@ $co-modal-ignore-warning-icon-width: 30px;
   }
 
   &__tabs {
-    flex: 0 0 220px;
     margin: 0 ($grid-gutter-width / 2) 0 0;
   }
 }
